update provider handler
